--- a/fre/make/tests/null_example/platforms.yaml
+++ b/fre/make/tests/null_example/platforms.yaml
@@ -26,7 +26,7 @@ platforms:
      containerRun: "apptainer"
    - name: ci.gnu
      compiler: gnu
-     fc: ftn
-     cc: cc
-     mkTemplate: /mkmf/templates/linux-ubuntu-xenial-gnu.mk
+     fc: mpifort
+     cc: mpicc
+     mkTemplate: ${GITHUB_WORKSPACE}/mkmf/templates/linux-ubuntu-xenial-gnu.mk
      modelRoot: ${HOME}/fremake_canopy/test
