--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -16,6 +16,7 @@ jobs:
           conda env create -f environment.yml --name fre-cli
 
           # add conda env's executables to github's PATH equiv.
+          conda init
           conda activate fre-cli
           echo $PATH >> $GITHUB_PATH
           
