--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -6,9 +6,14 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/rem1776/fre-cli:test2
+      image: ghcr.io/rem1776/fre-cli:test3
     steps:
       - uses: actions/checkout@v4
+      - name: Add conda to system path
+        run: |
+          # $CONDA is an env var pointing to root of miniconda dir
+          echo $CONDA/bin >> $GITHUB_PATH
+      
       - name: Create fre-cli environment
         run: |
           # create environment containing all dependencies
@@ -16,24 +21,17 @@ jobs:
           conda env create -f environment.yml --name fre-cli
 
           # add conda env's executables to github's PATH equiv.
-          conda init
-          conda activate fre-cli
-          echo $PATH >> $GITHUB_PATH
+          echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
           
           # use *conda environment's pip* to install fre-cli
           # called w/ full path to conda's python for explicitness
           # called as a module (-m pip) for explicitness
-          pip install --prefix $CONDA/envs/fre-cli .      
-
-      - uses: actions/checkout@v4
-        with:
-          repository: 'NOAA-GFDL/mkmf'
-          path: 'mkmf'
+          $CONDA/envs/fre-cli/bin/python -m pip install --prefix $CONDA/envs/fre-cli .      
 
       - name: Run pytest in fre-cli environment
         run: |
-          # add mkmf binaries for fre make tests
-          echo $GITHUB_WORKSPACE/mkmf/bin >> $GITHUB_PATH 
+          # try to make sure the right things are in GITHUB_PATH
+          echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
           
           # run pytest
           pytest --junit-xml=pytest_results.xml --config-file=fre/pytest.ini --cov-config=fre/coveragerc --cov-report=xml --cov=fre fre/
@@ -47,8 +45,9 @@ jobs:
         run: |
           # try to make sure the right things are in GITHUB_PATH
           echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
-          # run pylint
-          pylint -ry --ignored-modules netCDF4 fre/ || echo "pylint returned non-zero exit code. preventing workflow from dying with this echo."
+          
+          # run pylint, ignored modules avoid warnings arising from code internal to those modules 
+          pylint --max-args 6 -ry --ignored-modules netCDF4,cmor fre/ || echo "pylint returned non-zero exit code. preventing workflow from dying with this echo."
       
       - name: Install Sphinx and Build Documentation
         run: |
