--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -9,6 +9,10 @@ jobs:
       image: ghcr.io/rem1776/fre-cli:test3
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          repo: NOAA-GFDL/mkmf
+          path: mkmf
       - name: Create fre-cli environment
         run: |
           # create environment containing all dependencies
@@ -20,6 +24,7 @@ jobs:
 
           # add conda env's executables to github's PATH equiv.
           echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
+          echo $GITHUB_WORKSPACE/mkmf/bin >> $GITHUB_PATH
           
           # use *conda environment's pip* to install fre-cli
           # called w/ full path to conda's python for explicitness
@@ -28,10 +33,8 @@ jobs:
 
       - name: Run pytest in fre-cli environment
         run: |
-          # try to make sure the right things are in GITHUB_PATH
-          echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
-          
           # run pytest
+          which mkmf
           pytest --junit-xml=pytest_results.xml --config-file=fre/pytest.ini --cov-config=fre/coveragerc --cov-report=xml --cov=fre fre/
           
           # install genbadge to generate coverage badge based on xml
