--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -11,7 +11,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: NOAA-GFDL/mkmf
-          path: mkmf
       - uses: actions/checkout@v4
       - name: Create fre-cli environment
         run: |
@@ -25,8 +24,7 @@ jobs:
           # add conda env's executables to github's PATH equiv.
           echo $CONDA/envs/fre-cli/bin >> $GITHUB_PATH
           echo $GITHUB_WORKSPACE/mkmf/bin >> $GITHUB_PATH
-          ls $GITHUB_WORKSPACE
-          ls
+          find $GITHUB_WORKSPACE -name "mkmf"
           
           # use *conda environment's pip* to install fre-cli
           # called w/ full path to conda's python for explicitness
