hardcode the mkTemplate in platform

--- a/fre/make/tests/null_example/platforms.yaml
+++ b/fre/make/tests/null_example/platforms.yaml
@@ -28,5 +28,5 @@ platforms:
      compiler: gnu
      fc: mpifort
      cc: mpicc
-     mkTemplate: ${GITHUB_WORKSPACE}/mkmf/templates/linux-ubuntu-xenial-gnu.mk
+     mkTemplate: /__w/fre-cli/fre-cli/mkmf/templates/linux-ubuntu-xenial-gnu.mk
      modelRoot: ${HOME}/fremake_canopy/test
