--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -31,11 +31,10 @@ jobs:
 
       - name: Run pytest in fre-cli environment
         run: |
-          # this rearranges our PATH so that conda is in the back
-          # necessary because otherwise it will use conda's netcdf/hdf5 instead of containers during model compilation
-          source /root/.bashrc
-          export CONDA_PATH=$CONDA/env/fre-cli/bin
-          export PATH=$(echo "$PATH" | sed -e "s|$CONDA_PATH:||;s|:$CONDA_PATH||;s|$|:$CONDA_PATH|")
+          # add spack installed binaries to front of path so we don't
+          # use conda's netcdf/hdf5 during compilation tests
+          echo PATH $PATH
+          export PATH="/opt/views/view/bin:$PATH"
           echo PATH $PATH
 
           # run pytest
