--- a/.github/workflows/podman.yaml
+++ b/.github/workflows/podman.yaml
@@ -7,4 +7,7 @@ jobs:
       image: ghcr.io/noaa-gfdl/fre-cli:miniconda24.7.1_gcc14.2.0
     steps:
       - name: see if podman works
-        run: podman pull ecpe4s/noaa-intel-prototype:2023.09.25
+        run: |
+          cat /etc/subuid
+          sudo usermod --add-subuids 200000-201000 --add-subgids 200000-201000 $USER
+          podman pull ecpe4s/noaa-intel-prototype:2023.09.25
