add another options

--- a/.github/workflows/create_test_conda_env.yml
+++ b/.github/workflows/create_test_conda_env.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/noaa-gfdl/fre-cli:miniconda24.7.1_gcc14.2.0
-      options: "--cap-add CAP_SYS_ADMIN"
+      options: "--cap-add CAP_SYS_ADMIN --security-opt apparmor=unconfined"
     steps:
       - name: test podman
         run: podman pull alpine
